[package]
name = "neo-lvgl-sys"
description = "Raw FFI bindings for LVGL 9.x graphics library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
links = "lvgl"

[dependencies]
cty.workspace = true

[build-dependencies]
cc = "1.1"
bindgen = "0.71"
glob = "0.3"

[features]
default = []
