[package]
name = "neo-lvgl"
description = "Safe, idiomatic Rust bindings for LVGL 9.x graphics library"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
neo-lvgl-sys.workspace = true
cty.workspace = true
bitflags.workspace = true
embedded-graphics-core = { workspace = true, optional = true }

[features]
default = ["widgets-core"]

# Display backend integrations
embedded-graphics = ["dep:embedded-graphics-core"]

# Widget sets
widgets-core = []
widgets-extra = ["widgets-core"]

# Individual extra widgets (for fine-grained control)
widget-chart = ["widgets-extra"]
widget-calendar = ["widgets-extra"]
widget-keyboard = ["widgets-extra"]
widget-led = ["widgets-extra"]
widget-list = ["widgets-extra"]
widget-menu = ["widgets-extra"]
widget-msgbox = ["widgets-extra"]
widget-scale = ["widgets-extra"]
widget-span = ["widgets-extra"]
widget-spinbox = ["widgets-extra"]
widget-spinner = ["widgets-extra"]
widget-table = ["widgets-extra"]
widget-tabview = ["widgets-extra"]
widget-tileview = ["widgets-extra"]
widget-window = ["widgets-extra"]

# Font features
ttf = []
font-montserrat-8 = []
font-montserrat-10 = []
font-montserrat-12 = []
font-montserrat-14 = []
font-montserrat-16 = []
font-montserrat-18 = []
font-montserrat-20 = []
font-montserrat-22 = []
font-montserrat-24 = []
font-montserrat-26 = []
font-montserrat-28 = []
font-montserrat-30 = []
font-montserrat-32 = []
font-montserrat-34 = []
font-montserrat-36 = []
font-montserrat-38 = []
font-montserrat-40 = []
font-montserrat-42 = []
font-montserrat-44 = []
font-montserrat-46 = []
font-montserrat-48 = []

# Memory features
alloc = []
std = ["alloc"]

# Unsafe escape hatches
unsafe-api = []
